--- a/src/app/shared/components/nav-bar/nav-bar.component.html
+++ b/src/app/shared/components/nav-bar/nav-bar.component.html
@@ -1,2 +1,32 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+        <a class="navbar-brand brandTitle d-flex gap-2" href="#">
+            <img src="assets/svg/logo.svg" alt="" width="30" height="24" class="d-inline-block align-text-top">
+            PawVet
+        </a>
+        <div class="justify-content-end">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse navItems" id="navbarNav">
+                <ul class="navbar-nav me-auto d-flex gap-3">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Citas</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Mascotas</a>
+                    </li>
+                    <li class="nav-item">
+
+                        <a class="navbar-brand" href="#">
+                            <img src="assets/svg/profile.svg" alt="Perfil" width="40" height="40"
+                                class="d-inline-block align-text-top">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+
+        </div>
+    </div>
 </nav>
